--- a/lonarui/package.json
+++ b/lonarui/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "mockjs": "^1.0.1-beta3",
     "qs": "^6.7.0",
     "sass": "^1.22.3",
     "sass-loader": "^7.1.0",
