--- a/lonarui/package.json
+++ b/lonarui/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "echarts": "^4.5.0",
     "element-ui": "^2.12.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
@@ -21,6 +22,7 @@
     "sass": "^1.22.3",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.2",
+    "vue-echarts": "^4.0.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1"
   },
@@ -66,7 +68,8 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "wowjs": "^1.1.3"
   },
   "engines": {
     "node": ">= 6.0.0",
